[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/ammo/ammo.glb" type="PackedScene" id=1]
[ext_resource path="res://assets/sfx/pickup/power_up_04.ogg" type="AudioStream" id=2]
[ext_resource path="res://pickups/Ammo.gd" type="Script" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.9, 0.9, 0.9 )

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -2.99034, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
curve = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
direction = Vector3( 0, 1, 0 )
spread = 94.19
gravity = Vector3( 0, 0, 0 )
initial_velocity = 11.63
linear_accel = 27.91
damping = 33.72
scale_curve = SubResource( 3 )

[sub_resource type="SpatialMaterial" id=5]
emission_enabled = true
emission = Color( 0.0712, 0.89, 0.89, 1 )
emission_energy = 1.97
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="CubeMesh" id=6]
material = SubResource( 5 )
size = Vector3( 0.1, 0.1, 0.1 )

[node name="Ammo" type="Area" groups=[
"ammo",
]]
script = ExtResource( 3 )

[node name="ammo" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.02988, 0 )
shape = SubResource( 1 )

[node name="PickupSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -16.0

[node name="PickupParticles" type="Particles" parent="."]
emitting = false
amount = 30
lifetime = 0.75
one_shot = true
explosiveness = 0.95
randomness = 0.14
local_coords = false
process_material = SubResource( 4 )
draw_pass_1 = SubResource( 6 )

[connection signal="body_entered" from="." to="." method="_on_Ammo_body_entered"]
[connection signal="finished" from="PickupSound" to="." method="_on_PickupSound_finished"]
